tests/negative/resource_cast_from_carrier.ora
resource TokenUnit = u256;

contract CastFromCarrier {
    pub fn bad(amount: TokenUnit) {
        @cast(Resource<TokenUnit>, amount);
    }
}
